début de mon projet1

--- a/www/style.css
+++ b/www/style.css
@@ -1,3 +1,17 @@
 h1 {
-  color: rgba(238, 255, 0, 0.397);
+  color: rgba(2, 91, 245, 0.966);
+}
+.header {
+  font-family Arial, Helvetica, sans-serif;
+  padding: left;
+  padding:
+
+
+   background-color:  rgb(0, 255, 34);
+   
+   }
+ul {
+  display: inline;
+  Color: bleu;
+  align-content: center; 
 }
