--- a/www/style.css
+++ b/www/style.css
@@ -1,17 +1,57 @@
-h1 {
-  color: rgba(2, 91, 245, 0.966);
+body  {
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      margin: 0;
+      background-color: rgba(245, 247, 252, 0.966);
+    }
+.block-nav-main {
+  padding-right: 0;
 }
+section {
+        background: rgb(11, 2, 138)
+}
+.white1 {
+  color: rgb(255, 250, 250);
+}
+.white {
+  color: rgb(255, 250, 250);
+}
+#menu1 >li >a
+ {
+   background-color: rgba(212, 7, 7, 0.966);
+  margin: 1px auto;
+  width: 120px;
+  float: right;
+}
+h2.titre_h2 {
+  color: rgba(212, 7, 7, 0.966);
+}
+ul.titre_h1 {
+  color: rgb(234, 237, 243)
+
+}
+.white {
+	display: inline ;
+	width: 130px;
+  padding-left: 1cm;
+  padding-right:  0,3em; 
+	text-decoration: none;
+	color: #fff;
+	font-weight: bold;
+} 
 .header {
-  font-family Arial, Helvetica, sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
   padding: left;
-  padding:
-
-
-   background-color:  rgb(0, 255, 34);
-   
-   }
+  background-color: rgb(0, 255, 34);
+}
 ul {
   display: inline;
   Color: bleu;
   align-content: center; 
+}
+div.logo {
+  background-image: url("img/ugc.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 140px;
+  height: 20px;
 }
