--- a/www/style.css
+++ b/www/style.css
@@ -1,57 +1,77 @@
-body  {
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
+body {
+      font-family: 'uniformMedium';
       margin: 0;
       background-color: rgba(245, 247, 252, 0.966);
-    }
-.block-nav-main {
-  padding-right: 0;
-}
-section {
-        background: rgb(11, 2, 138)
-}
-.white1 {
-  color: rgb(255, 250, 250);
-}
-.white {
-  color: rgb(255, 250, 250);
-}
-#menu1 >li >a
- {
-   background-color: rgba(212, 7, 7, 0.966);
-  margin: 1px auto;
-  width: 120px;
-  float: right;
-}
-h2.titre_h2 {
-  color: rgba(212, 7, 7, 0.966);
-}
-ul.titre_h1 {
-  color: rgb(234, 237, 243)
+     }
 
-}
+header {
+        background: #08288b;
+        width: 100%;
+        box-sizing: contain;
+        height: 100px;
+       }
+
+#header {
+         max-width: 1000px;
+         margin: auto;
+
+        }
+.white1 {
+           color: rgb(255, 250, 250);
+        }
+
+#menu1 >li >a {
+                background-color: rgba(212, 7, 7, 0.966);
+                margin: 1px auto;
+                width: 120px;
+                float: right;
+              }
+h2.titre_h2 {
+             color: rgba(212, 7, 7, 0.966);
+            }
+ul.titre_h1 {
+              color: rgb(234, 237, 243)
+
+            }
 .white {
-	display: inline ;
-	width: 130px;
-  padding-left: 1cm;
-  padding-right:  0,3em; 
-	text-decoration: none;
-	color: #fff;
-	font-weight: bold;
-} 
+        display: inline ;
+        width: 130px;
+        padding-left: 1cm;
+        padding-right:  0,3em; 
+        text-decoration: none;
+        color: rgb(17, 1, 1);
+        font-weight: 0;
+        font-size: 150%;
+       }
 .header {
-  font-family: "Arial", "Helvetica", sans-serif;
-  padding: left;
-  background-color: rgb(0, 255, 34);
+        font-family: "Arial", "Helvetica", sans-serif;
+        padding: left;
+        background-color: rgb(0, 255, 34);
 }
 ul {
-  display: inline;
-  Color: bleu;
-  align-content: center; 
-}
+    display: inline;
+    Color: bleu;
+    align-content: center; 
+   }
 div.logo {
-  background-image: url("img/ugc.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 140px;
-  height: 20px;
-}
+          background-image: url("img/ugc.png");
+          background-size: contain;
+          background-repeat: no-repeat;
+          width: 140px;
+          height: 20px;
+         }
+.baspage {
+          color: rgb(9, 103, 245);
+          display: inline;
+          list-style: none
+          padding-left: 36px;
+          padding-right: 36px; 
+        }
+ footer {
+          background: rgb(179, 243, 5);
+          width: 100%;
+        }
+.baspage {
+          max-width: 1000px;
+          margin: auto;
+        }
