--- a/www/style.css
+++ b/www/style.css
@@ -46,7 +46,7 @@ ul.titre_h1 {
 .header {
         font-family: "Arial", "Helvetica", sans-serif;
         padding: left;
-        background-color: rgb(0, 255, 34);
+        background-color: #0c0c0c;);
 }
 ul {
     display: inline;
@@ -67,11 +67,18 @@ div.logo {
           padding-left: 36px;
           padding-right: 36px; 
         }
- footer {
-          background: rgb(179, 243, 5);
+#block-autopromo {
+          background: #08288b;
           width: 100%;
+          height: 200px
         }
-.baspage {
-          max-width: 1000px;
-          margin: auto;
+.iphone {
+        width: 100%;
+        height: 50px;
+}               
+ footer {
+          background: rgb(5, 5, 5);
+          width: 100%;
+          height: 300px
         }
+
