--- a/www/style.css
+++ b/www/style.css
@@ -10,27 +10,37 @@ header {
    height: 100px;
 }
 #header {
-   max-width: 1000px;
    margin: auto;
 }
-#menu1 >li >a {
-   background-color: rgba(212, 7, 7, 0.966);
-   margin: 1px auto;
-   width: 120px;
-   float: right;
-}
+
 h2.titre_h2 {
    color: rgba(24, 23, 23, 0.966);
+   text-transform: uppercase;
+   height: 150px
+}
+.new h2 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  margin-left: 151px;
+}
+.image-middle{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 10px;
+  margin-right: 170px;
+  height: 520px;
 }
 .white {
    display: inline ;
    width: 130px;
-   padding-left: 1cm;
-   padding-right:  0,3em; 
+   padding-left: 26px;
+   padding-right: 35px;
    text-decoration: none;
    color: rgb(17, 1, 1);
-   font-weight: 0;
-   font-size: 130%;
+   font-family: 'uniformMedium'; 
+   font-size: 120%;
 }
 .photo-gardiens {
   margin-top: 25px;
@@ -49,11 +59,11 @@ h2.titre_h2 {
   font-size: 20px;
   color: white;
 }
-.header {
+header[role="header"] {
    display: flex;
    font-family: "Arial", "Helvetica", sans-serif;
    padding: left;
-   background-color: #0c0c0c;
+   background-color: #013492;
 }
 ul {
    display: inline;
@@ -61,13 +71,26 @@ ul {
    align-content: center; 
    list-style: none;
 }
-.header-right {
+a {
+  color: white;
+  text-decoration: none;
+}
+.nav-recherche > ul {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex-basis: 50%;  
+  align-items: center;
   color: white;
-  font-size: 18px;
+  font-size: 16px;
+  margin-right: 112px;
+  margin-left: 235px;
+}
+.icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
 }
 div.logo {
    display: flex;
@@ -75,37 +98,61 @@ div.logo {
    background-image: url("img/logo-white.png");
    background-size: contain;
    background-repeat: no-repeat;
-   width: 140px;
-   height: 70px;
+   width: 476px;
+   height: 80px;
 }
-.conteneur1 {
+.container {
    display: flex;
+   justify-content: center;
    background-color: #08288b;
-   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   font-family: Verdana, Geneva, Tahoma, sans-serif; 
    width: 100;
-   height: 10;
 }
-.contenaire-paragraph {
+.autopromo-photo {
+  position: relative;
+  bottom: 35px;
+  padding-left: 100px;
+}
+.magaz {
    display: flex;
    justify-content: center;
    align-items: center;
-   font-size: 20px;
+   font-size: 16px;
    color: #f8f9fc;
-   font-weight: bold;
+}
+.appli {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  color: #f8f9fc;
+}
+.btn { 
+  display: flex;
+  align-items: center;
+  font-size: large;
+  font-weight: bold;
+  height: 50px;
+  width: 100px;
+  border-color: white;
+  border: 2px white solid;
 }
 
 .title {
    display: flex;
-   justify-content: center;
-   color: #f8f9fc;
-   font-size: 20px;
+   justify-content: left;
+   align-items: left;
+   color: #04b7e2;
+   font-size: 30px;
+   height: 23px;
 }
 .title-ugc {
    display: flex;
-   justify-content: center;
-   align-items: flex-start;
-   font-size: 20px;
-   color: #f8f9fc;
+   justify-content: left;
+   align-items: left;
+   font-size: 30px;
+   color: #04b7e2;
+   height: 23px;
 }
 .blok-footer {
    display: flex;
@@ -114,13 +161,9 @@ div.logo {
    justify-content: space-around;
 }
 
-.conteneur-colonne {
-   display: flex;
-   list-style: none;
-}
 .block-footer-menu {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
 }
 footer a {
   color: #ffffff;
@@ -130,5 +173,6 @@ footer a {
 footer h3 {
   color: #ffffff;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 20px;
 }
+
